# npower_scraping_project

./: README.md  main.py  parser.py  pyproject.toml  youtube_videos.csv
