[project]
name = "npowerscraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "beautifulsoup4>=4.12.3",
    "datahorse>=0.1.4",
    "pandas>=2.2.3",
    "playwright>=1.49.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
]
